--- a/include/views/default/crunchbutton/frontend/restaurant.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurant.phtml
@@ -366,6 +366,7 @@
 				&nbsp;
 				<span ng-show="order.form.pay_type=='card'">by card</span>
 			</div>
+			<div ng-show="points.free_delivery_message"><strong>You have 25000 points! This delivery fee is on us.</strong></div>
 		</div>
 
 	</form>
@@ -374,6 +375,8 @@
 
 	<!-- stored user info -->
 	<div class="delivery-payment-info main-content-readable" ng-show="restaurant._open && !order.showForm && order.cart.hasItems()">
+
+		<div ng-show="points.free_delivery_message"><strong>You have 25000 points! This delivery fee is on us.</strong></div>
 
 		<div>
 			<label>Your phone number:&nbsp;</label>
