--- a/include/views/default/cockpit2/frontend/staff/staff-marketing-form.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-marketing-form.phtml
@@ -77,6 +77,14 @@
 
 		<ul ng-class="{'submitted':submitted}" class="ul-inputs">
 
+			<li class="li-input" ng-class="{'error':form.staffInviteCode.$invalid}">
+				<div class="label">Referral Code:</div>
+				<div class="input"><input type="text" name="staffInviteCode" ng-model="staff.invite_code" required placeholder="Referral Code"></div>
+				<div class="box-error">
+					<small ng-show="form.staffInviteCode.$error.required">Required.</small>
+				</div>
+			</li>
+
 			<li class="li-input">
 				<div class="label">How much a marketing rep earns from new customer referrals:</div>
 				<div class="input"><input type="number" ignore-mouse-wheel ng-model="staff.referral_admin_credit" placeholder=""></div>
