updates to welcome screen

--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-location.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-location.phtml
@@ -8,7 +8,7 @@
 		<p>
 			In order to better serve customers, please enable your location services for me.
 			<br><br>
-			Location services are only enabled while you are on shift. This will help save your battery so we can hang out much longer.
+			Continued use of GPS running in the background can dramatically decrease battery life. To help you save battery, location services are only enabled while you are on shift.
 			<br><br>
 			Go ahead and click the enable button at the bottom so we can continue.
 		</p>
