welcome screen shit

--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-info.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-info.phtml
@@ -1,10 +1,12 @@
 <div class="drivers-welcome">
 	<div class="top-pad"></div>
 	<div class="content-padding">
-		<h1 class="welcome-title">Fullfilling orders</h1>
+		<h1 class="welcome-title">Crunchbutton &amp; You</h1>
 		
 		<div class="welcome-icon"><i class="fa fa-truck"></i></div>
-		<p>Your task is to deliver the orders and my job is to make your task a lot easier. Let's work together!</p>
+		<p>
+			Crunchbutton lets customers order food delivered from their favorite restaurants. Your task is to deliver the food. I'm an app, and I'll help you do that. Looking forward to working together!
+		</p>
 		<div class="welcome-button"><a href="/drivers/welcome/location"><button class="ladda-button button orange" data-color="orange" data-style="zoom-in"><span class="ladda-label">Next</span></button></a></div>
 	</div>
 </div>
