--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-location.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-location.phtml
@@ -6,11 +6,11 @@
 		
 		<div class="welcome-icon"><i class="fa fa-location-arrow"></i></div>
 		<p>
-			In order to better serve customers, please enable your location services for me.
+			In order to better serve customers, we need to enable your location services.
 			<br><br>
-			Continued use of GPS running in the background can dramatically decrease battery life. To help you save battery, location services are only enabled while you are on shift.
+			Continued use of GPS running in the background can dramatically decrease battery life. To help you save battery, I will only enabled location services while you are on shift.
 			<br><br>
-			Go ahead and click the enable button at the bottom so we can continue.
+			Go ahead and click the enable button at the bottom to give me permission to do so.
 		</p>
 		<div class="welcome-button"><a href ng-click="locateit()"><button class="ladda-button button orange" data-color="orange" data-style="zoom-in"><span class="ladda-label">Enable</span></button></a></div>
 	</div>
