--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-push.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-push.phtml
@@ -5,11 +5,11 @@
 		<div class="welcome-icon"><i class="fa fa-bell"></i></div>
 		
 		<p>
-			I just love talking to you, so let's do it more often. 
+			I love talking to you, so let's do it more often. 
 			<br><br>
 			When an order comes in, I will let you know about it by sending you a notification.
 			<br><br>
-			Please enable push notifications so we can keep on chatin'.
+			Please enable push notifications so we can keep on chattin'.
 		</p>
 		<div class="welcome-button"><a href ng-click="pushit()"><button class="ladda-button button orange" data-color="orange" data-style="zoom-in"><span class="ladda-label">Enable</span></button></a></div>
 	</div>
