--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-wahoo.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-wahoo.phtml
@@ -1,10 +1,10 @@
 <div class="drivers-welcome">
 	<div class="top-pad"></div>
 	<div class="content-padding">
-		<h1 class="welcome-title">Wahoo</h1>
+		<h1 class="welcome-title">Wahoo!!!</h1>
 		
 		<div class="welcome-icon"><i class="fa fa-child"></i></div>
-		<p>That't it! Now, lets deliver some awesome sauce!</p>
+		<p>That's it! Now, let's deliver some awesome sauce!</p>
 		<div class="welcome-button"><a href="/drivers/docs"><button class="ladda-button button orange" data-color="orange" data-style="zoom-in"><span class="ladda-label">yay</span></button></a></div>
 	</div>
 </div>
