--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-home.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-home.phtml
@@ -1,11 +1,11 @@
 <div class="drivers-welcome">
 	<div class="top-pad"></div>
 	<div class="content-padding">
-		<h1 class="welcome-title">Well, hello there beautiful!</h1>
+		<h1 class="welcome-title">Well, hello there!</h1>
 
 		<!--div class="drivers-welcome-logo"></div -->
 		<div class="welcome-icon"><i class="fa fa-smile-o"></i></div>
-		<p>So it seems this is the first time I have seen you. Lets take a second to get to know each other.</p>
+		<p>So it seems this is the first time we've met. Let's take a second to get to know each other.</p>
 		<div class="welcome-button"><a href="/drivers/welcome/info"><button class="ladda-button button orange" data-color="orange" data-style="zoom-in"><span class="ladda-label">Next</span></button></a></div>
 	</div>
 </div>
