--- a/include/views/default/crunchbutton/order/index.phtml
+++ b/include/views/default/crunchbutton/order/index.phtml
@@ -47,7 +47,7 @@
 		<td>
 			<table cellpadding="0" cellspacing="0"><tr>
 				<td><img src="/assets/images/mprinter/timer.png" class="icon-big"></td>
-				<td class="text-size-mid">Expected by <?=$order->expectedBy()->format('h:i')?></td>
+				<td class="text-size-mid">Estimated by <?=$order->expectedBy()->format('h:i')?></td>
 			</tr></table>
 		</td>
 	</tr>
