--- a/include/views/default/seven/frontend/order.phtml
+++ b/include/views/default/seven/frontend/order.phtml
@@ -130,7 +130,7 @@
 			<div class="order-icon"><div class="icon-timer"></div></div>
 			<div class="order-info order-info-oneline">
 				<p>
-					Expected by&nbsp;
+					Estimated by&nbsp;
 					<span ng-show="(order.delivery_type == 'delivery')">{{order._restaurant_delivery_estimated_time_formated}}</span>
 					<span ng-hide="(order.delivery_type == 'delivery')">{{order._restaurant_pickup_estimated_time_formated}}</span>
 				</p>
