--- a/include/views/default/crunchbutton/frontend/order.phtml
+++ b/include/views/default/crunchbutton/frontend/order.phtml
@@ -29,33 +29,38 @@
 				<a href="javascript:;" ng-click="modal.signupOpen();" class="add-password-button">Create an account</a>
 				<br />
 				<div class="order-details-highlight">
-				You just earned <strong>{{Math.floor(order.reward.points)}}</strong> points!
-				<span ng-if="!account.user.points.free_delivery_message && account.user.points.away_free_delivery">
-					<br>You are {{account.user.points.away_free_delivery}} points away from a free delivery.<br>
-				</span>
-				Want more points? Share this order to double it! Find out more ways to get free delivery here.</div>
-				</div>
-				<div class="divider dots"></div>
-			</div>
-
-			<div ng-show="account.user.has_auth">
-				<div class="social-button facebook-button social-button-share clearfix" ng-click="facebook();">
-					<i class="fa fa-facebook"></i><span class="social-button-text">Share what you ordered</span>
-					<div class="divider"></div>
-				</div>
-				<div ng-if="order.reward.points && !order.reward.shared">
-					<div class="order-details-highlight">You just earned {{order.reward.points}} points! <strong>Double</strong> it by sharing on Facebook.<br><br></div>
-				</div>
-				<div ng-show="order._new && referral.invite_url && referral.enabled">
-					Earn <b>Crunch Credit</b> for every new friend who orders with your shared link!
-					<br /><br />
+					Create an account and earn {{Math.floor(order.reward.points)}} points towards a free delivery.
+					<br />
 				</div>
 			</div>
+		</div>
 
+		<div ng-show="account.user.has_auth">
+			<div class="social-button facebook-button social-button-share clearfix" ng-click="facebook();">
+				<i class="fa fa-facebook"></i><span class="social-button-text">Share what you ordered</span>
+				<div class="divider"></div>
+			</div>
+			<div ng-if="order.reward.points && !order.reward.shared">
+				<div class="order-details-highlight">
+					<div ng-if="account.user.points.free_delivery_message && account.user.points.free_delivery">
+						You have <strong>{{account.user.points.free_delivery}}</strong> points! The next delivery fee is on us.
+					</div>
+					<div ng-if="!account.user.points.free_delivery_message">
+						You just earned <strong>{{order.reward.points}}</strong> points! You are <strong>{{account.user.points.away_free_delivery}}</strong> points away from a free delivery.
+						<br>
+						Want more points? Share this order to double it!
+						<br>
+						Find out more ways to get free <a href="/orders/#credit">delivery here</a>.
+					</div>
+				</div>
+			</div>
+			<div ng-show="order._new && referral.invite_url && referral.enabled">
+				Earn <b>Crunch Credit</b> for every new friend who orders with your shared link!<br />
+			</div>
+		</div>
+			<br>
 			<div class="divider dots"></div>
 			<br />
-
-
 			<div ng-if="order.delivery_service == 1">
 				For updates on your order, please text your driver, whose number you'll be texted.
 			</div>
@@ -101,7 +106,7 @@
 
 			${{order.charged | formatPrice}}
 
-			<div class="credit" ng-show="(order.credit && order.credit > 0)">( ${{order._final_price}} - ${{order._credit}} credit )</div>
+			<div class="credit" ng-show="!order.reward_delivery_free && (order.credit && order.credit > 0)">( ${{order._final_price}} - ${{order._credit}} credit )</div>
 
 			<br><br>
 
