--- a/include/views/default/crunchbutton/layout/micro.phtml
+++ b/include/views/default/crunchbutton/layout/micro.phtml
@@ -29,7 +29,8 @@
 			appId      : '411729638889643',
 			status     : true,
 			cookie     : true,
-			xfbml      : true
+			xfbml      : true,
+			version    : 'v2.2'
 		});
 
 		FB.Event.subscribe('edge.create', function(response) {
@@ -42,7 +43,7 @@
 		var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
 		if (d.getElementById(id)) {return;}
 		js = d.createElement('script'); js.id = id; js.async = true;
-		js.src = "//connect.facebook.net/en_US/all.js";
+		js.src = "//connect.facebook.com/en_US/sdk.js";
 		ref.parentNode.insertBefore(js, ref);
 	}(document));
 	
