--- a/include/views/default/crunchbutton/layout/html.phtml
+++ b/include/views/default/crunchbutton/layout/html.phtml
@@ -4,6 +4,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-animate.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-resource.min.js"></script>
 
 <!-- Payment stuff -->
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
