--- a/include/views/default/crunchbutton/frontend/order.phtml
+++ b/include/views/default/crunchbutton/frontend/order.phtml
@@ -28,7 +28,7 @@
 				Create an account to reorder your favorite food anywhere, including <a data-ng-href="http://crunchbutton.com">crunchbutton.com</a> on your phone.
 				<a href="javascript:;" ng-click="modal.signupOpen();" class="add-password-button">Create an account</a>
 				<br />
-				<div class="order-details-highlight">You just earned {{Math.floor(order.reward.points)}} points! <strong>Double</strong> it by creating an account.<br><br></div>
+				<div class="order-details-highlight">You just earned {{Math.floor(order.reward.points)}} points! <!--(we'll tell you what Crunch Credit is soon, we're not sure yet ourselves, but we think it's pretty great.)--> <strong>Double</strong> it by creating an account.<br><br></div>
 				<div class="divider dots"></div>
 			</div>
 
