--- a/include/views/default/seven/layout/html.phtml
+++ b/include/views/default/seven/layout/html.phtml
@@ -4,7 +4,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-animate.min.js"></script>
-
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-resource.min.js"></script>
 <!-- Payment stuff -->
 <script type="text/javascript" src="//js.stripe.com/v2/"></script>
 <script src="//js.balancedpayments.com/1.1/balanced.js"></script>
