--- a/www/assets/css/seven.css
+++ b/www/assets/css/seven.css
@@ -1906,6 +1906,8 @@ select.form-input {
 	display: table;
 	width: 100%;
 	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
 	white-space:nowrap;
 	margin-bottom: .45em;
 }
@@ -3606,3 +3608,105 @@ select {
 		margin-top: 0;
 	}
 }
+
+/*Application form styles:*/
+.container {
+    width:90%;
+    margin: auto;
+    height:auto;
+}
+.label {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 7px;
+    width: 33.33333%;
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    display: block;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    font-weight: 600;
+    height:30px;
+    float:none;
+    line-height:1.1;
+    
+}
+.textbox {
+    width: 50%;
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: block;
+    -webkit-font-smoothing: antialiased;
+    line-height: 1.42857;
+    float:left;
+    margin-bottom:15px;
+}
+.textbox div {
+    color:red;
+}
+.form-control {
+    font-weight: lighter;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    height: 36px;
+    padding-left: 12px;
+    padding-right: 12px;
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px; 
+    font-size: 16px;
+    line-height: 1.42857;
+    color: #555;
+    vertical-align: middle;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    text-transform: none;
+    -webkit-appearance: textfield;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+h2 {
+    line-height: 1.4;
+    margin-bottom: 15px;
+}
+.button-bottom {
+    width: 11em; 
+    background-color:rgb(247, 128, 83);
+    color:white;
+    border-radius:4px;
+    border:none;  
+}
+   
+em {
+    font-style:italic;
+    font-weight:300;
+}
+label span{
+    color:red;
+}
+
+ .restaurant-item-title {
+        font-weight:bold;
+        font-size:1.5em;
+        color:rgb(247, 128, 83);
+        padding-left:.5em;
+        padding-right:.5em;
+    }
+
