--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -41,10 +41,10 @@
         </span><br>
         
         <b>
-			 Soooooo, what’s my job exactly?
+			 Sooooo, how does this work?
 		</b>
 		<br>
-		  Customers place orders for food on our website and app. When an order arrives during your shift, you'll get a text on your phone linking you to the order page at right here on cockpit.la. You’ll see the details for each order - customer name, phone, and address; the restaurant name and address; and the order contents.You’ll pick up the food and deliver it. We aim for delivery times under 45 minutes. Simple enough, right?
+		  Customers place orders for food on our website and app. When an order arrives during your shift, you'll get a text on your phone linking you to the order page right here on cockpit.la. You’ll see the details for each order - customer name, phone, and address; the restaurant name and address; and the order contents.You’ll pick up the food and deliver it. We aim for delivery times under 45 minutes. Simple enough, right?
 		<br><br>
        
         <b>
@@ -99,7 +99,7 @@ If you run out of funds, you can either 1) ask another driver on shift to take t
             What should I tell the restaurant?
         </b>
         <br>
-In many cases we don't have a formal relationship with the restaurant, and it's best not to cause confusion. So order the food yourself, and don’t mention that it’s for delivery. If the order was sent directly to the restaurant, then say you're there to pick up the takeout order under the customer's name. If they point out that there’s no name on the card, tell them it’s a company card and everything will be fine.<br><br>
+In many cases we don't have a formal relationship with the restaurant, and it's best not to cause confusion. So order the food yourself, and don't mention that it's for delivery. If the order was sent directly to the restaurant, then say you're there to pick up the takeout order under the customer's name. If they point out that there's no name on the card, tell them it's a "company card" and everything will be fine.<br><br>
 
         <b>
         What if the order price is wrong?
@@ -185,10 +185,10 @@ We pay by direct deposit. Click <a href="/drivers/docs">Documents</a> and make s
         <b>
         When do I get my $$$?
         </b><br>
-You get paid each Friday. You get to keep all cash received from cash orders as an advance towards that too.<br><br>
+We deposit your payment every Friday. You get to keep all cash received from cash orders as an advance towards that too.<br><br>
         <a name="shifts"></a>
         <b>
-        I have a question about my paycheck.
+        I have a question about my payment.
         </b><br>
         Email <a href="mailto:payment@crunchbutton.com">payment@crunchbutton.com</a> with as many details as possible and we’ll figure it out!<br><br>
 		
@@ -238,7 +238,7 @@ We hate bugs! Email us at <a href="mailto:team@crunchbutton.com">team@crunchbutt
 Sure, but right now we have to do it for you manually. Text us what you want us to change your password to at <a ng-click="callText('646-783-1444')">646-783-1444</a> .<br><br>
 
 <b>How does your insurance work?</b><br>
-Youbeo, Inc (Crunchbutton’s parent company) has an insurance policy that will protect Youbeo and its drivers from liability claims arising from a motor vehicle collision during the course of business. The protection is up to $1,000,000 liability insurance policy that protects you against claims to third parties for injuries and property damage. This protection does not cover physical damage to any vehicle being used by a driver associated with Youbeo. Physical damage to any employee or subcontractor’s vehicle must be done through the individual's primary insurance company.<br><br>
+Youbeo, Inc (Crunchbutton's parent company) has an insurance policy that will protect from liability claims arising from a motor vehicle collision during the course of business. The protection is up to $1,000,000 liability insurance policy that protects you against claims to third parties for injuries and property damage. This protection does not cover physical damage to any vehicle being used by a driver associated with Youbeo. Physical damage to any employee or subcontractor’s vehicle must be done through the individual's primary insurance company.<br><br>
 
 <b>There’s something else I don’t understand!</b><br>
 Hey, we’re here to help. Text us at <a ng-click="callText('646-783-1444')">646-783-1444</a>  and we’ll figure it out!<br><br>
