--- a/include/views/default/crunchbutton/frontend/order.phtml
+++ b/include/views/default/crunchbutton/frontend/order.phtml
@@ -28,8 +28,10 @@
 				Create an account to reorder your favorite food anywhere, including <a data-ng-href="http://crunchbutton.com">crunchbutton.com</a> on your phone.
 				<a href="javascript:;" ng-click="modal.signupOpen();" class="add-password-button">Create an account</a>
 				<br />
-				<div class="order-details-highlight">You just earned {{Math.floor(order.reward.points)}} points! <!--(we'll tell you what Crunch Credit is soon, we're not sure yet ourselves, but we think it's pretty great.)--> <strong>Double</strong> it by creating an account.<br><br></div>
-				<div class="divider dots"></div>
+				<div class="order-details-highlight">
+					Create an account and earn {{Math.floor(order.reward.points)}} points towards a free delivery.
+					<br />
+				</div>
 			</div>
 
 			<div ng-show="account.user.has_auth">
@@ -38,11 +40,21 @@
 					<div class="divider"></div>
 				</div>
 				<div ng-if="order.reward.points && !order.reward.shared">
-					<div class="order-details-highlight">You just earned {{order.reward.points}} points! <strong>Double</strong> it by sharing on Facebook.<br><br></div>
+					<div class="order-details-highlight">
+						<div ng-if="account.user.points.free_delivery_message && account.user.points.free_delivery">
+							You have <strong>{{account.user.points.free_delivery}}</strong> points! The next delivery fee is on us.
+						</div>
+						<div ng-if="!account.user.points.free_delivery_message">
+							You just earned <strong>{{order.reward.points}}</strong> points! You are <strong>{{account.user.points.away_free_delivery}}</strong> points away from a free delivery.
+							<br>
+							Want more points? Share this order to double it!
+							<br>
+							Find out more ways to get free <a href="/orders/#credit">delivery here</a>.
+						</div>
+					</div>
 				</div>
 				<div ng-show="order._new && referral.invite_url && referral.enabled">
-					Earn <b>Crunch Credit</b> for every new friend who orders with your shared link!
-					<br /><br />
+					Earn <b>Crunch Credit</b> for every new friend who orders with your shared link!<br />
 				</div>
 			</div>
 
