--- a/include/views/default/crunchbutton/frontend/restaurant.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurant.phtml
@@ -376,7 +376,7 @@
 	<!-- stored user info -->
 	<div class="delivery-payment-info main-content-readable" ng-show="restaurant._open && !order.showForm && order.cart.hasItems()">
 
-		<div ng-show="points.free_delivery_message"><strong>You have 25000 points! This delivery fee is on us.</strong></div>
+		<div ng-show="restaurant.delivery == '1' && order.form.delivery_type=='delivery' && points.free_delivery_message"><strong>You have {{points.free_delivery}} points! This delivery fee is on us.</strong></div>
 
 		<div>
 			<label>Your phone number:&nbsp;</label>
