--- a/include/views/default/seven/frontend/orders.phtml
+++ b/include/views/default/seven/frontend/orders.phtml
@@ -1,10 +1,10 @@
 <div class="top-pad"></div>
 
-	
+
 <div class="content-padding">
 	<div class="orders-oranges animated-resize"></div>
 	<? /* You know, you can reorder any of your previous orders by taping on one of them, then reordering from the next page. Try it! */ ?>
-	
+
 </div>
 
 <div ng-show="!orders.list">
@@ -41,12 +41,33 @@
 							{{order.summary}}
 						</div>
 					</div>
-	
+
 					<div class="order-link fa fa-arrow-circle-right"></div>
 				</div>
-				<div class="divider"></div>		
+				<div class="divider"></div>
 			</li>
 		</ul>
 	</div>
 
+	<div class="content-padding">
+		<a id="credit"></a>
+		<div ng-show="!account.user.points.free_delivery_message && account.user.points.away_free_delivery">
+			<p>You are <strong>{{account.user.points.away_free_delivery}}</strong> points away from a free delivery.</p><br/>
+			<p>Earn points by ordering food, sharing your order, or referring friends.</p><br/>
+			<p>Share this family and friends code and both of you get your next delivery on us.</p><br/>
+			<p><strong>{{account.user.invite_code}}</strong></p>
+		</div>
+		<div ng-show="account.user.points.free_delivery_message && account.user.points.free_delivery">
+			<p>You have <strong>{{account.user.points.free_delivery}}</strong> points! The next delivery fee is on us.</p>
+		</div>
+		<br/>
+
+		<p class="social-button twitter-button social-button-invite" ng-click="referral.twitter();">
+			<i class="fa fa-twitter"></i><span class="social-button-text">Tweet</span>
+		</p>
+		<p class="social-button facebook-button social-button-invite" ng-click="referral.facebook();">
+			<i class="fa fa-facebook"></i><span class="social-button-text">Share</span>
+		</p>
+
+	</div>
 </div>
