--- a/include/views/default/seven/frontend/restaurant.closed.inline.phtml
+++ b/include/views/default/seven/frontend/restaurant.closed.inline.phtml
@@ -4,7 +4,7 @@
 			<i class="fa fa-clock-o"></i>
 		</span>
 		<span class="restaurant-box-content">
-			<div class="restaurant-box-title">Opens {{restaurant._opensIn_formatted}}</div>
+			<div class="restaurant-box-title">Available {{restaurant._opensIn_formatted}}</div>
 			<div class="restaurant-box-text">
 				Hours of operation (<span ng-bind="restaurant._tzabbr"></span>):<br>
 				<span ng-bind-html-unsafe="restaurant.closedMessage() | nl2br"></span>
