added app loader

--- a/include/views/default/crunchbutton/home/index.phtml
+++ b/include/views/default/crunchbutton/home/index.phtml
@@ -218,11 +218,6 @@
 			$this->title = 'Food Delivery | Order from Local Restaurants | Crunchbutton';
 		?>
 	
-		<div class="restaurants-bubble-wrap">
-			<div class="bubble-tail bubble-tail-green">
-				<div class="text">
-					<h1 class="restaurants-push-tagline"><b>Push a button</b><br>Get food delivered</h1>
-				</div>
 				<? /*
 				<div><!--adding the search bar here-->
 				<script>
@@ -240,6 +235,13 @@
 <gcse:search></gcse:search>
 				</div>
 				<? */ ?>
+	
+	<? /*
+		<div class="restaurants-bubble-wrap">
+			<div class="bubble-tail bubble-tail-green">
+				<div class="text">
+					<h1 class="restaurants-push-tagline"><b>Push a button</b><br>Get food delivered</h1>
+				</div>
 			</div>
 			<div class="restaurants-orange"></div>
 			<div class="divider"></div>			
@@ -250,6 +252,13 @@
 				</div>
 				<div class="divider"></div>
 			<? endif ; ?>
+		</div>
+		
+		*/?>
+	
+		<div class="stamp-loader">
+			<div class="stamp-loader-button"></div>
+			<div class="stamp-loader-words"></div>
 		</div>
 
 		<? if ($bot) : ?>
