--- a/www/assets/css/seven.css
+++ b/www/assets/css/seven.css
@@ -3681,3 +3681,31 @@ i {
 	 color:rgb(247, 128, 83);
 }
 
+.stamp-loader {
+    height: 16.7em;
+	width: 16.7em;
+	background-size: 100%;
+	margin: 0 auto;
+	margin-top: 14.8em;
+}
+
+.stamp-loader-button {
+    height: 100%;
+	width: 100%;
+	background-size: 100%;
+	background: url(../images/micro/stamp-loader-button.svg);
+}
+
+.stamp-loader-words {
+	margin-top: -100%;
+    height: 100%;
+	width: 100%;
+	background-size: 100%;
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+	background: url(../images/micro/stamp-loader-words.svg);
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
