--- a/include/views/default/crunchbutton/frontend/restaurant.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurant.phtml
@@ -257,17 +257,26 @@
 								Pay with a card, NOT CASH, to use your ${{giftcard.value}} gift card!</span>
 							</div>
 
+							<div ng-repeat="success in giftcard.giftcards.success">
+								<div ng-if="success.delivery_free && restaurant.delivery == '1' && order.form.delivery_type=='delivery'">
+									<span ng-if="order.form.pay_type == 'card'">{{success.message}}</span>
+									<span ng-if="order.form.pay_type == 'cash'">Pay with a card, NOT CASH, to get our delivery free</span>
+								</div>
+							</div>
+
 							<div ng-show="restaurant.giftcard == 1 && order.form.pay_type == 'card' ">
 								<!-- Gift card success -->
 								<div ng-repeat="success in giftcard.giftcards.success">
-									<div ng-show="!success.error && !success.message">
-										Congrats! This gift card ({{success.giftcard}}) gives you ${{success.value}}.
-									</div>
-									<div ng-show="!success.error && success.message">
-										{{success.message}}
-									</div>
-									<div ng-show="success.error == 'other restaurant'">
-										The gift card ({{success.giftcard}}) you are trying to use belongs to another restaurant.
+									<div ng-if="!success.delivery_free">
+										<div ng-show="!success.error && !success.message">
+											Congrats! This gift card ({{success.giftcard}}) gives you ${{success.value}}.
+										</div>
+										<div ng-show="!success.error && success.message">
+											{{success.message}}
+										</div>
+										<div ng-show="success.error == 'other restaurant'">
+											The gift card ({{success.giftcard}}) you are trying to use belongs to another restaurant.
+										</div>
 									</div>
 								</div>
 								<!-- Gift card errors -->
@@ -366,7 +375,10 @@
 				&nbsp;
 				<span ng-show="order.form.pay_type=='card'">by card</span>
 			</div>
-			<div ng-show="points.free_delivery_message"><strong>You have 25000 points! This delivery fee is on us.</strong></div>
+			<div ng-show="points.free_delivery_message">
+				<strong ng-if="order.form.pay_type == 'card'">You have {{points.free_delivery}} points! This delivery fee is on us.</strong>
+				<strong ng-if="order.form.pay_type == 'cash'">Pay with a card, NOT CASH, to get our delivery free.</strong>
+			</div>
 		</div>
 
 	</form>
@@ -376,7 +388,10 @@
 	<!-- stored user info -->
 	<div class="delivery-payment-info main-content-readable" ng-show="restaurant._open && !order.showForm && order.cart.hasItems()">
 
-		<div ng-show="restaurant.delivery == '1' && order.form.delivery_type=='delivery' && points.free_delivery_message"><strong>You have {{points.free_delivery}} points! This delivery fee is on us.</strong></div>
+		<div ng-show="restaurant.delivery == '1' && order.form.delivery_type=='delivery' && points.free_delivery_message">
+			<strong ng-if="order.form.pay_type == 'card'">You have {{points.free_delivery}} points! This delivery fee is on us.</strong>
+			<strong ng-if="order.form.pay_type == 'cash'">Pay with a card, NOT CASH, to get our delivery free.</strong>
+		</div>
 
 		<div>
 			<label>Your phone number:&nbsp;</label>
